# WorldBuilder

./: CMakeLists.txt  README.md  WorldBuilder.dsp  WorldBuilder.dsw  WorldBuilder.layout  WorldBuilder_private.rc  groups.xml  set.bat  wb.bat
defaults/: half-life.xml
resource/: resource.h  resource.rc
source/: CCompileManager.cpp  CCompileManager.h  CControlsManager.cpp  CControlsManager.h  CDialogsManager.cpp  CDialogsManager.h  CMainFrame.cpp  CMainFrame.h  CSettings.cpp  CSettings.h  custommsg.h  files.txt  funclib.cpp  funclib.h
source/controls/: CCommonDialogs.cpp  CFolderView.cpp  CReportView.cpp  GUI.H
source/dialogs/: CCommandDlg.cpp  CCommandDlg.h  CDirectoryDlg.cpp  CDirectoryDlg.h  CGroupDlg.cpp  CGroupDlg.h  CNewDlg.cpp  CNewDlg.h  CNewNameDlg.cpp  CNewNameDlg.h  COpenSaveDlg.cpp  COpenSaveDlg.h  CToolDlg.cpp  CToolDlg.h
source/tools/: CCommand.cpp  CCommand.h  CGroup.cpp  CGroup.h  CGroupManager.cpp  CGroupManager.h  CTool.cpp  CTool.h  trash.txt
